# kalipso-demo

./: README.md  assignment.md  pyproject.toml  requirements_assignment.json
outputs/: example_output.json  example_output_prettified.json  policy_text.txt
src/: analyze.ipynb  document_loader.py  fastapi_server.py  frontend.py  llm_calls.py  output_structure.py  prompts.py
